# docs/swagger.json
@@ -6,54 +6,44 @@
     "paths": {
         "/api/cypher/elliptic/decrypt": {
             "post": {
-                "description": "Decrypts encrypted data using a private PEM key provided in the form and encrypted data in the request body.",
+                "description": "Decrypt the provided text using the given public key",
                 "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "Encryption"
+                "produces": [
+                    "text/plain"
                 ],
-                "summary": "Decrypt data using PEM key",
+                "tags": [
+                    "encryption"
+                ],
+                "summary": "Decrypt data",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Private PEM Key",
-                        "name": "pemKey",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "description": "Encrypted data (raw bytes)",
-                        "name": "encryptedData",
+                        "description": "Payload",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "integer"
-                            }
+                            "$ref": "#/definitions/api.EncryptRequest"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Decrypted text",
+                        "description": "Decrypted data",
                         "schema": {
-                            "$ref": "#/definitions/api.ResultData"
+                            "type": "string"
                         }
                     },
                     "400": {
-                        "description": "Invalid request",
+                        "description": "Bad Request",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -69,7 +59,7 @@
                     "application/json"
                 ],
                 "produces": [
-                    "application/octet-stream"
+                    "text/plain"
                 ],
                 "tags": [
                     "encryption"
@@ -77,18 +67,18 @@
                 "summary": "Encrypt data",
                 "parameters": [
                     {
-                        "description": "Encrypt data",
-                        "name": "data",
+                        "description": "Payload",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.EncryptData"
+                            "$ref": "#/definitions/api.EncryptRequest"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Encrypted data as binary",
+                        "description": "Encrypted data",
                         "schema": {
                             "type": "string"
                         }
@@ -135,10 +125,15 @@
         }
     },
     "definitions": {
-        "api.EncryptData": {
+        "api.EncryptRequest": {
             "type": "object",
+            "required": [
+                "pemKey",
+                "text"
+            ],
             "properties": {
-                "public": {
+                "pemKey": {
+                    "description": "Ключ как строка",
                     "type": "string"
                 },
                 "text": {
@@ -153,17 +148,6 @@
                     "type": "string"
                 },
                 "public": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.ResultData": {
-            "type": "object",
-            "required": [
-                "text"
-            ],
-            "properties": {
-                "text": {
                     "type": "string"
                 }
             }
